--- a/style/index.css
+++ b/style/index.css
@@ -4,7 +4,7 @@ html, body {
 
 body {
     color: white; /*cor das letras*/
-    background-color: black; /*cor do fundo*/
+    background-color: #030120; /*cor do fundo*/
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto !important;
 } /*faz referencia a todo o projeto*/
@@ -15,7 +15,7 @@ ul {
     list-style-type: none; /*põe o estilo ponto inicial da lista como "none"*/
     align-items: center; /*alinha os itens ao centro*/
     padding: 16px; /*dá uma distancia de 16px*/
-    background-color: #74ccff;
+    background-color: #0487d2;
     margin-bottom: 20px;
 } /*faz referencia apenas as ul(aquela lista criada no HTML)*/
 
@@ -23,26 +23,27 @@ a {
     color:aliceblue;
     text-decoration: none;
 }
-
-body {
-    margin: 20px;
-}
-
 header img {
     margin: 20px;
-    width: 20%;
-    height: 20%;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
-    border: 3px solid #74ccff
+    border: 3px solid #0487d2
+}
+header {
+    padding: 0 100px 0px 100px;
+}
+main{
+    padding: 0 100px 0 100px;
 }
 
 h1 {
-    color: #74ccff;
+    color: #0487d2;
 }
 
 footer img {
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
 }
 
 footer {
